--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="cXVhcnRlcmJhY2tzJTJDY29tcGxldGlvbiUyQ25mbA==" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1743551112368" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="quarto-post image-right" data-index="0" data-categories="cXVhcnRlcmJhY2tzJTJDY29tcGxldGlvbiUyQ25mbA==" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1743704443136" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="379">
 <div class="thumbnail">
 <p><a href="./posts/indoor-throwing-advantage/index.html" class="no-external"></a></p><a href="./posts/indoor-throwing-advantage/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/indoor-throwing-advantage/image.png" class="thumbnail-image"></p>
@@ -235,7 +235,7 @@ nfl
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/indoor-throwing-advantage/index.html" class="no-external">There are 10 indoor or domed stadiums in the NFL. One huge factor for playing indoor, is the wind or weather doesn’t effect the quarterbacks.</a>
+<a href="./posts/indoor-throwing-advantage/index.html" class="no-external">There are 10 indoor or domed stadiums in the NFL. One huge factor for playing indoor, is the wind or weather doesn’t effect the quarterbacks. You feel me?</a>
 </div>
 </div>
 <div class="metadata">
