--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
-<p>Christian Naujokaitis is a sports videographer in Nebraksa studying sports media st the University of Nebraska-Lincoln.</p>
+<p>Christian Naujokaitis is a sports videographer in Nebraksa studying sports media st the University of Nebraska-Lincoln. Chrsitian is a contractor for Hurrdat Sports, a media company and news outlet based out of Omaha, Nebraska. Hurrdat covers high school, college level and pro level sports in the Midwest. Christian works as a content creator by building short form content for their social medias.</p>
 
 
 </main> 
