--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
 <script src="site_libs/quarto-html/anchor.min.js"></script>
 <link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="site_libs/quarto-html/quarto-syntax-highlighting-dark-b53751a350365c71b6c909e95f209ed1.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<link href="site_libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-fe619c39aab777594ffe156f55fa95df.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="dark">
+<link href="site_libs/bootstrap/bootstrap-e0f6d32e1684404b5dd4fbb34fe016aa.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -196,7 +196,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Y29tcGxldGlvbg==">completion <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmZs">nfl <span class="quarto-category-count">(1)</span></div><div class="category" data-category="cXVhcnRlcmJhY2tz">quarterbacks <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Y29tcGxldGlvbg==">completion <span class="quarto-category-count">(1)</span></div><div class="category" data-category="ZmluYWxz">finals <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmJh">nba <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmZs">nfl <span class="quarto-category-count">(1)</span></div><div class="category" data-category="cXVhcnRlcmJhY2tz">quarterbacks <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -210,7 +210,46 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="cXVhcnRlcmJhY2tzJTJDY29tcGxldGlvbiUyQ25mbA==" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1744326612787" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1159">
+<div class="quarto-post image-right" data-index="0" data-categories="bmJhJTJDYmFza2V0YmFsbCUyQ2ZpbmFscw==" data-listing-date-sort="1745902800000" data-listing-file-modified-sort="1745960380487" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1134">
+<div class="thumbnail">
+<p><a href="./posts/warriors-cavs-finals/index.html" class="no-external"></a></p><a href="./posts/warriors-cavs-finals/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/warriors-cavs-finals/image.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/warriors-cavs-finals/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/warriors-cavs-finals/index.html" class="no-external">Was it the Cavs’ greatness or the Warriors’ collapse</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/warriors-cavs-finals/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('bmJh'); return false;">
+nba
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('YmFza2V0YmFsbA=='); return false;">
+basketball
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('ZmluYWxz'); return false;">
+finals
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/warriors-cavs-finals/index.html" class="no-external">Some of the best things in the world came out in 2016: AirPods, Stranger Things, and most importantly, the 2016 NBA Finals.</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/warriors-cavs-finals/index.html" class="no-external">
+<div class="listing-date">
+Apr 29, 2025
+</div>
+<div class="listing-author">
+Christian Naujokaitis
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="cXVhcnRlcmJhY2tzJTJDY29tcGxldGlvbiUyQ25mbA==" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1745537864891" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7" data-listing-word-count-sort="1389">
 <div class="thumbnail">
 <p><a href="./posts/indoor-throwing-advantage/index.html" class="no-external"></a></p><a href="./posts/indoor-throwing-advantage/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/indoor-throwing-advantage/image.png" class="thumbnail-image"></p>
